[package]
name = "ipfs-webdav"
version = "0.2.0"
authors = ["Debox Development Team <dev@debox.network>"]
description = "A WebDAV server that enables direct access to IPFS MFS as a mounted drive"
homepage = "https://debox.network/ipfs-webdav"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/debox-network/ipfs-webdav"
keywords = ["ipfs", "webdav"]
categories = ["filesystem", "web-programming"]
edition = "2021"

[dependencies]
async-trait = "0.1"
bytes = "1.5"
env_logger = "0.10"
futures = "0.3"
http = "0.2"
ipfs-api-backend-hyper = { version = "0.6", features = ["with-send-sync"] }
log = "0.4"
tokio = { version = "1.33", features = ["full"] }
webdav-handler = "0.2.0"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }

[[example]]
name = "base"
